fix style horizontal scroll

--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -217,7 +217,6 @@
     z-index: 1000;
     box-sizing: border-box;
     padding: 0px 15px 15px 15px;
-    overflow-x: visible;
 }
 
 #maintext .sidebar-menu-content {
